k8s/containerized-data-importer/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cdi-uploadproxy
  namespace: cdi
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
      namespace: gateway
      sectionName: https
  hostnames:
    - cdi-uploadproxy.k8s.szp.io
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: cdi-uploadproxy
          port: 443
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
