k8s/containerized-data-importer/routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cdi-uploadproxy
  namespace: cdi
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: default
      namespace: gateway
      sectionName: https
  hostnames:
    - cdi-uploadproxy.k8s.szp.io
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: cdi-uploadproxy-tls
      matches:
        - path:
            type: PathPrefix
            value: /
